@@ -1,0 +1,7 @@
+#!/bin/sh
+
+function a {
+    echo
+}
+
+. include.bash
