@@ -1,0 +1,5 @@
+#!/bin/sh
+
+. include.bash
+
+a b
