@@ -1,0 +1,5 @@
+#!/bin/sh
+
+function a() {
+    echo a
+}
